# StructExt

./: Cargo.toml  README.md
examples/: example1.rs  example_downcast.rs
src/: iterator.rs  lib.rs
