[package]
name = "struct_ext"
version = "0.1.0"
edition = "2021"
description = "A macro to generate an iterator over the fields of a struct."
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
