[package]
name = "struct_ext"
version = "0.1.1"
edition = "2021"
description = "A set of useful derive macros for structs"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
